--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html, body {
     align-items: center;
     justify-content: center;
     position: relative;
+    border: 1px solid red;
 }
 
 label {
@@ -23,9 +24,11 @@ label {
 input {
     width: 100%;
     height: 100%;
-    margin: 10px 0 10px 0;
+    margin: 0 auto;
+    margin-top: 5px;
     font-size: 1.3em;
-    padding: 5px 0 5px 0;
+    padding: 3px 0 3px 0;
+    overflow: hidden;
 }
 
 .btnSubmit {
