--- a/styles.css
+++ b/styles.css
@@ -2,41 +2,45 @@ html, body {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    max-width: 300px;
-    height: 50vh;
+    max-width: 350px;
+    width: 100%;
+    height: 100vh;
 }
 
-#bodyForm {
+body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: rgb(242, 241, 235);
+}
+
+header > h1 {
+    width: 100%;
+    height: 80px;
+    background-color: rgb(136, 171, 142);
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    border: 1px solid red;
+    letter-spacing: 5px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    margin: 0;
 }
 
-label {
-    font-size: 1.5em;
-    letter-spacing: 1.3px;
+main {
+    background-color: rgb(238, 231, 218);
+    width: 100%;
+}
+
+#bodyForm {
+    border: 1px solid red;
+    width: 100%;
+    box-sizing: inherit;
 }
 
 input {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    margin-top: 5px;
-    font-size: 1.3em;
-    padding: 3px 0 3px 0;
-    overflow: hidden;
-}
-
-.btnSubmit {
-    cursor: pointer;
-    width: 150px;
-    height: 100%;
-    position: relative;
-    font-size: 1.1em;
-    padding: 5px 0 5px 0;
-    margin: 30px 0 0 30%;
+    width: 50%;
+    box-sizing: inherit;
 }
