--- a/css/login_styles.css
+++ b/css/login_styles.css
@@ -16,6 +16,10 @@ body {
     background-color: rgb(242, 241, 235);
 }
 
+a {
+    text-decoration: none;
+}
+
 header > h1 {
     width: 100%;
     height: 80px;
@@ -35,12 +39,43 @@ main {
 }
 
 #bodyForm {
-    border: 1px solid red;
     width: 100%;
     box-sizing: inherit;
+    text-align: center;
 }
 
 input {
-    width: 50%;
-    box-sizing: inherit;
+    width: 70%;
+    border: none;
+    border-radius: 50px;
+    height: 30px;
+    margin-top: 10px;
+}
+
+main .forgot {
+    font-size: 0.8em;
+    text-align: end;
+    margin-right: 50px;
+}
+
+.btnSubmit {
+    width: 70%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 50px;
+    height: 30px;
+    background-color: rgb(136, 171, 142);
+    font-size: 1.1em;
+    letter-spacing: 1.5px;
+    cursor: pointer;
+}
+
+.signUpFooter{
+    margin-top: 50px;
+
+}
+
+.noAccount {
+    color: blue;
 }
