--- a/css/signup_styles.css
+++ b/css/signup_styles.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: rgb(242, 241, 235);
+    background-color: rgb(175, 200, 173);
 }
 
 a {
@@ -23,7 +23,7 @@ a {
 header > h1 {
     width: 100%;
     height: 80px;
-    background-color: rgb(136, 171, 142);
+    background-color: rgb(238, 231, 218);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,7 +34,7 @@ header > h1 {
 }
 
 main {
-    background-color: rgb(238, 231, 218);
+    background-color: rgb(242, 241, 235);
     width: 100%;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -47,18 +47,12 @@ main {
 
 }
 
-input {
+input, textarea {
     width: 70%;
     border: none;
     border-radius: 10px;
     height: 30px;
     margin-top: 10px;
-}
-
-main .forgot {
-    font-size: 0.8em;
-    text-align: end;
-    margin-right: 50px;
 }
 
 .btnSubmit {
@@ -68,17 +62,8 @@ main .forgot {
     border: none;
     border-radius: 10px;
     height: 40px;
-    background-color: rgb(136, 171, 142);
+    background-color: rgb(238, 231, 218);
     font-size: 1.1em;
     letter-spacing: 1.5px;
     cursor: pointer;
-}
-
-.signUpFooter{
-    margin-top: 50px;
-
-}
-
-.noAccount {
-    color: blue;
 }
