--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -8,9 +8,6 @@ html, body {
 }
 
 body {
-    /* display: flex; */
-    /* justify-content: center; */
-    /* flex-direction: column; */
     margin-top: 10rem;
     width: 100%;
     height: 100%;
@@ -19,33 +16,37 @@ body {
 
 /* ---------    HEADER  ------------ */
 
-header {
+header h1 {
     text-align: center;
     letter-spacing: 5px;
     border: 0.5px solid black;
     border-radius: 10px;
+    padding: 20px 0 20px 0;
+}
+
+header h2 {
+    letter-spacing: 5px;
+    border-bottom: 1px solid black;
+    padding: 10px 0 30px 0;
 }
 
 /* ---------     MAIN   -------------- */
 
-main {
-    display: flex;
+/* main {
     margin-top: 2rem;
-}
-
-main .profile_header {
-    border-bottom: 1px solid black;
-    font-size: 1.5rem;
-    width: 100%;
+    display: flex;
 }
 
 main .profile_tag {
     border: 1px solid red;
-    /* position: relative;
-    display: flex;
-    flex-direction: column; */
+    width: 20%;
+    text-align: center;
 }
 
-main .profile_info {
-    border: 1px solid red;
+.profile_tag {
+    padding-bottom: 20px;
+} */
+
+tr {
+    padding: 50px;
 }
