--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -30,23 +30,19 @@ header h2 {
     padding: 10px 0 30px 0;
 }
 
-/* ---------     MAIN   -------------- */
+/* ---------     TABLE   -------------- */
 
-/* main {
-    margin-top: 2rem;
-    display: flex;
+table {
+    width: 100%;
 }
 
-main .profile_tag {
-    border: 1px solid red;
-    width: 20%;
-    text-align: center;
+th {
+    text-align: left;
+    width: 30%;
+    height: 2rem;
 }
 
-.profile_tag {
-    padding-bottom: 20px;
-} */
-
-tr {
-    padding: 50px;
+td {
+    text-align: left;
+    border: 0.5px solid black;
 }
