--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -34,6 +34,9 @@ header h2 {
 
 table {
     width: 100%;
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid black;
 }
 
 th {
