--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -30,7 +30,7 @@ header h2 {
     padding: 10px 0 30px 0;
 }
 
-/* ---------     TABLE   -------------- */
+/* ---------     MAIN (TABLE)   -------------- */
 
 table {
     width: 100%;
