--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -14,6 +14,10 @@ body {
     background-color: rgb(242, 241, 235);
 }
 
+a {
+    text-decoration: none;
+}
+
 /* ---------    HEADER  ------------ */
 
 header h1 {
@@ -28,6 +32,12 @@ header h2 {
     letter-spacing: 5px;
     border-bottom: 1px solid black;
     padding: 10px 0 30px 0;
+}
+
+/* -----------  LOGOUT  ---------------- */
+
+.logout {
+   text-align: right;
 }
 
 /* ---------     MAIN (TABLE)   -------------- */
