--- a/css/login_styles.css
+++ b/css/login_styles.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
     display: flex;
-    justify-content: center;
+    margin-top: 5rem;
     flex-direction: column;
     width: 100%;
     height: 100%;
