--- a/css/signup_styles.css
+++ b/css/signup_styles.css
@@ -14,6 +14,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(175, 200, 173);
+    overflow: hidden;
 }
 
 a {
@@ -34,7 +35,7 @@ header > h1 {
 }
 
 main {
-    background-color: rgb(242, 241, 235);
+    background-color: rgb(136, 171, 142);
     width: 100%;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
