--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -4,7 +4,6 @@ html, body {
     box-sizing: border-box;
     max-width: 800px;
     width: 100%;
-    height: 100vh;
 }
 
 body {
@@ -36,8 +35,10 @@ header h2 {
 
 /* -----------  LOGOUT  ---------------- */
 
-.logout {
-   text-align: right;
+.btn_logout {
+    border: 1px solid red;
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* ---------     MAIN (TABLE)   -------------- */
