--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -22,41 +22,54 @@ a {
 header h1 {
     text-align: center;
     letter-spacing: 5px;
-    border: 0.5px solid black;
-    border-radius: 10px;
+    border: 0.5px solid rgb(151, 146, 146);
+    border-radius: 5px;
     padding: 20px 0 20px 0;
 }
 
 header h2 {
     letter-spacing: 5px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(151, 146, 146);
     padding: 10px 0 30px 0;
 }
 
-/* -----------  LOGOUT  ---------------- */
+/* -----------  Links  ---------------- */
 
-.btn_logout {
-    border: 1px solid red;
+.topbar {
+    display: flex;
+}
+
+.topbar ul {
+    width: 100%;
+    height: 2vw;
+    list-style: none;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    gap: 1.5rem;
 }
 
 /* ---------     MAIN (TABLE)   -------------- */
 
 table {
-    width: 100%;
+    margin: 0 auto;
+    width: 70%;
     margin-top: 2rem;
     padding-bottom: 2rem;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(151, 146, 146);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 th {
+    width: 10vw;
     text-align: left;
-    width: 30%;
     height: 2rem;
 }
 
 td {
+    width: 10vw;
     text-align: left;
-    border: 0.5px solid black;
+    border: 0.5px solid rgb(151, 146, 146);
 }
