--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -77,5 +77,5 @@ td {
     text-align: left;
     border: 0.5px solid #88AB8E;
     border-radius: 3px;
-    padding-left: 10px;
+    padding: 0 5px 0 5px;
 }
