--- a/css/profile_style.css
+++ b/css/profile_style.css
@@ -70,6 +70,7 @@ th {
     text-align: left;
     height: 2rem;
     padding-right: 20px;
+    
 }
 
 td {
@@ -78,4 +79,5 @@ td {
     border: 0.5px solid #88AB8E;
     border-radius: 3px;
     padding: 0 5px 0 5px;
+    gap: 5px;
 }
