--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,8 @@ body {
 
 /********* LEFT SIDE *************/
 
+/* PROFILE INFO */
+
 .leftSide {
     width: 30%;
     height: 100vh;
@@ -26,7 +28,6 @@ body {
 .leftSide img {
     border-radius: 50%;
     padding: 3px;
-    box-shadow: -3px -6px 9px 1px #F2F1EB;
 }
 
 .leftSide h1 {
@@ -34,4 +35,10 @@ body {
     font-family: "Poppins", serif;
     font-weight: 900;
     font-style: normal;
+}
+
+/* CONTACT */
+
+.contact {
+    margin-top: 5rem;
 }
