--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ html, body {
     padding: 0;
     margin: 0 auto;
     max-width: 1000px;
-    height: 100vh;
+    height: 100%;
     border: 1px solid #88AB8E;
 }
 
