--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@ html, body {
     padding: 0;
     margin: 0 auto;
     max-width: 1000px;
-    height: 100%;
     border: 1px solid #88AB8E;
 }
 
@@ -18,10 +17,7 @@ body {
 .leftSide {
     width: 35%;
     max-width: 300px;
-    height: 100vh;
     background-color: #88AB8E;
-    position: relative;
-    overflow: hidden;
     display: flex;
     align-items: baseline;
     justify-content: center;
@@ -34,7 +30,6 @@ body {
 
 .profile_info img {
     width: 200px;
-    /* height: 200px; */
 }
 
 .leftSide img {
@@ -53,6 +48,7 @@ body {
 
 .contact {
     width: 100%;
+    height: 100%;
     margin-top: 5rem;
     font-family: "Poppins", sans-serif;
     font-weight: 900;
@@ -73,7 +69,7 @@ body {
 }
 
 .contact .info_name {
-    text-align: center;
+    text-align: left;
     width: 100%;
     height: 100%;
 }
