--- a/css/index.css
+++ b/css/index.css
@@ -70,17 +70,19 @@ body {
 
 .contact .info_img {
     padding-left: 5px;
+    padding-bottom: 10px;
     object-fit: cover;
     max-width: 50px;
     height: 100%;
+
 }
 
 .contact .info_name {
     text-align: left;
     width: 100%;
     height: 100%;
+    padding-bottom: 10px;
 }
-
 
 
 /************ RIGHT SIDE **************/
@@ -92,5 +94,22 @@ body {
 }
 
 .education {
-    border: 1px solid red;
+    width: 100%;
+    font-size: 1.2rem;
+}
+
+.education h2 {
+    background-color: #88AB8E;
+    letter-spacing: 1.5px;
+}
+
+.education table {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.education td {
+    text-align: center;
+    padding: 10px;
+    border-bottom: 1px solid #88AB8E;
 }
