--- a/css/edit_profile.css
+++ b/css/edit_profile.css
@@ -68,3 +68,11 @@ input, textarea {
     letter-spacing: 1.5px;
     cursor: pointer;
 }
+
+.links {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin: auto;
+    padding: 10px 10px;
+}
