--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,14 @@ body {
     display: flex;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
+
+
 /********* LEFT SIDE *************/
 
 /* PROFILE INFO */
@@ -51,7 +59,9 @@ body {
     font-style: normal;
 }
 
-/* CONTACT */
+
+
+/************* CONTACT *************/
 
 .contact {
     width: 100%;
@@ -85,6 +95,8 @@ body {
 }
 
 
+
+
 /************ RIGHT SIDE **************/
 
 .rightSide {
@@ -93,12 +105,43 @@ body {
     width: 100%;
 }
 
-.education {
-    width: 100%;
-    font-size: 1.2rem;
+.rightside_first_container {
+    display: flex;
+    letter-spacing: 0.5rem;
 }
 
-.education h2 {
+.years {
+    width: 30%;
+    text-align: center;
+}
+
+.rightside_second_container {
+    border: 1px solid red;
+    display: flex;
+    margin-top: 1.5rem;
+}
+
+.year_dates {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.schools {
+    flex: 1;
+    width: 100%;
+    text-align: center;
+}
+
+.school_dates {
+    flex: 1;
+    width: 100%;
+    text-align: center;
+}
+
+
+/* .education h2 {
     background-color: rgba(136, 171, 142, 0.7);
     letter-spacing: 1.5px;
     padding: 20px 20px 20px 15px;
@@ -113,7 +156,13 @@ body {
     text-align: center;
     padding: 10px;
     border-bottom: 1px solid #88AB8E;
-}
+} */
+
+
+
+
+
+/************ SKILLS ****************/
 
 .skills {
     margin-top: 30px;
@@ -125,4 +174,16 @@ body {
     background-color: rgba(136, 171, 142, 0.7);
     letter-spacing: 1.5px;
     padding: 20px 20px 20px 15px;
+}
+
+.progressbar {
+    width: 100%;
+    border: 1px solid none;
+}
+
+.htmlbar {
+    border: none;
+    width: 100%;
+    height: 0.8rem;
+    border-radius: 10px;
 }
