--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ html, body {
     padding: 0;
     margin: 0 auto;
     max-width: 1000px;
-        
+    border: 1px solid #88AB8E;
 }
 
 body {
@@ -105,7 +105,7 @@ a {
     width: 100%;
 }
 
-.rightside_first_container {
+.rightside_first_tab {
     display: flex;
     letter-spacing: 0.5rem;
 }
@@ -115,7 +115,7 @@ a {
     text-align: center;
 }
 
-.rightside_second_container, .rightside_third_container, .rightside_forth_container {
+.rightside_second_tab, .rightside_third_tab, .rightside_forth_tab {
     border-top: 1px solid #88AB8E;
     border-bottom: 1px solid #88AB8E;
     display: flex;
