--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -4,14 +4,68 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: 0 auto;
+html {
     width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+    background-color: #F8FAFC;
+}
+
+body {
+    display: flex;
+}
+
+a {
+    text-decoration: none;
+}
+
+/******************* TOP NAVIGATION *****************/
+
+.top_nav {
+    width: 100%;
     height: 100%;
 }
 
-header {
-    border: 1px solid red;
-    width: 100%;
-    height: 100vh;
+.top_nav ul {
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+.top_nav li {
+    list-style: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.15em;
+    position: relative;
+    padding: 1px 10px;
+        font-size: 1.1em;
+        font-family: "Poppins", serif;
+        font-weight: 200;
+        font-style: normal;      
+}
+
+.top_nav li:first-child {
+    margin-right: auto;
+    font-family: "La Belle Aurore", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5em;
+}
+
+.top_nav li::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 1px;         /* Distance from text */
+    width: 0;            /* Start with no underline */
+    height: 2px;         /* Thickness of the underline */
+    background-color: #000;      /* Color of the underline */
+    transition: 0.3s ease-in-out;     /* Smooth transition */
+}
+
+.top_nav li:hover::after {
+    width: 100%;              /* Full width on hover */
+    text-underline-offset: 5px;
 }
