--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -11,23 +11,20 @@ html {
     background-color: #F8FAFC;
 }
 
-body {
-    display: flex;
-}
-
 a {
     text-decoration: none;
 }
 
 /******************* TOP NAVIGATION *****************/
 
-.top_nav {
+nav {
     width: 100%;
     height: 100%;
 }
 
 .top_nav ul {
     display: flex;
+    flex-wrap: wrap;
     padding: 0;
     margin: 0;
 }
@@ -51,16 +48,16 @@ a {
     font-family: "La Belle Aurore", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 2.5em;
+    font-size: 2em;
 }
 
 .top_nav li::after {
     content: '';
     position: absolute;
     left: 0;
-    bottom: 1px;         /* Distance from text */
+    bottom: 0;         /* Distance from text */
     width: 0;            /* Start with no underline */
-    height: 2px;         /* Thickness of the underline */
+    height: 1px;         /* Thickness of the underline */
     background-color: #000;      /* Color of the underline */
     transition: 0.3s ease-in-out;     /* Smooth transition */
 }
@@ -69,3 +66,5 @@ a {
     width: 100%;              /* Full width on hover */
     text-underline-offset: 5px;
 }
+
+/******************* HEADER *****************/
