--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -68,3 +68,13 @@ nav {
 }
 
 /******************* HEADER *****************/
+
+header {
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+}
+
+header .greetings {
+    font-size: 2.5rem;
+}
