--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -11,6 +11,11 @@ html {
     background-color: #F8FAFC;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+}
+
 a {
     text-decoration: none;
 }
@@ -73,8 +78,9 @@ header {
     border: 1px solid red;
     width: 100%;
     height: 100%;
+    margin-top: 500px;
 }
 
-header .greetings {
-    font-size: 2.5rem;
+.greetings {
+    font-size: 5rem;
 }
