--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -11,11 +11,6 @@ html {
     background-color: #F8FAFC;
 }
 
-body {
-    width: 100%;
-    height: 100%;
-}
-
 a {
     text-decoration: none;
 }
@@ -29,9 +24,6 @@ nav {
 
 .top_nav ul {
     display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
 }
 
 .top_nav li {
@@ -78,9 +70,22 @@ header {
     border: 1px solid red;
     width: 100%;
     height: 100%;
-    margin-top: 500px;
+    margin-top: 50px;
+    font-family: "Roboto", serif;
 }
 
 .greetings {
-    font-size: 5rem;
+    font-size: 3.5rem;
+    margin-left: 50px;
+}
+
+.personal {
+    margin: 20px 0 0 200px;
+    display: flex;
+    gap: 50px;
+}
+
+.personal_information li {
+    list-style: none;
+    
 }
