--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -71,11 +71,12 @@ nav {
 header {
     border: 1px solid red;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     margin-top: 50px;
     font-family: "Roboto", serif;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .greetings {
@@ -89,8 +90,44 @@ header {
     gap: 10px;
 }
 
+.personal_profile {
+    position: relative;
+    width: 200px;
+}
+
+.personal img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 200px;
+    height: auto;
+    z-index: 2;
+}
+
+.second_box {
+    background-color: #212121;
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 265px;
+}
+
+.third_box {
+    background-color: #9AA6B2;
+    z-index: -1;
+    position: absolute;
+    bottom: -23px;
+    right: -21px;
+    width: 200px;
+    height: 265px;
+}
+
+
 .personal table {
     width: 100%;
+    margin-left: 50px;
 }
 
 .personal_info {
