--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -15,6 +15,15 @@ a {
     text-decoration: none;
 }
 
+/******************* First Container *****************/
+
+#first_container {
+    border: 1px solid red;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
 /******************* TOP NAVIGATION *****************/
 
 nav {
@@ -69,7 +78,6 @@ nav {
 /******************* HEADER *****************/
 
 header {
-    border: 1px solid red;
     width: 100%;
     height: 80vh;
     margin-top: 50px;
