--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -124,38 +124,40 @@ header {
     height: 265px;
 }
 
-
-.personal table {
-    width: 100%;
-    margin-left: 50px;
-}
-
 .personal_info {
     width: 600px;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
 }
 
-.info_title {
+.personal_info h2 {
     width: 100%;
-    font-size: 2rem;
+    text-align: center;
 }
 
 .personal_info td {
+    margin-top: 5px;
     padding: 8px 8px;
+    width: 50%;
+    text-align: center;
 }
 
-.info_name {
-    width: 30%;
-}
-
-.info_answer {
-    flex: 1;
+.line {
+    border: 1px solid #9AA6B2;
+    margin-top: 50px;
 }
 
 /******************* EXPERIENCE *****************/
 
-#exp {
+#work {
     border: 1px solid red;
     width: 100%;
-    height: 100vh;
-    margin-top: 30px;
+    max-width: 800px;
+    height: 100%;
+    margin: 50px auto;
+}
+
+.work_exp span {
+    margin-top: 50px;
 }
