--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -144,7 +144,7 @@ header {
 }
 
 .line {
-    border: 1px solid #9AA6B2;
+    border: 0.2px solid #9AA6B2;
     margin-top: 50px;
 }
 
@@ -181,9 +181,14 @@ section .first_container {
     width: 40%;
     border-right: 1px solid #9AA6B2;
     margin-right: 30px;
+    text-align: center;
 }
 
 .company_business {
     flex: 1;
     margin-left: 50px;
+}
+
+li {
+    list-style: none;
 }
