--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -170,7 +170,7 @@ section {
     font-size: 1.1rem;
 }
 
-section .first_container {
+section .container {
     margin-top: 30px;
     display: flex;
     width: 100%;
