--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 1200px;
 }
 
 html {
@@ -200,9 +201,10 @@ aside {
 
 #skills {
     width: 100%;
-    max-width: 800px;
+    max-width: 1200px;
     height: 100%;
     margin: 50px auto;
+    display: flex;
 }
 
 .skills_exp {
@@ -210,6 +212,30 @@ aside {
 }
 
 .skills_exp span {
-    margin-top: 50px;
+    margin-top: 100px;
     font-size: 1.1rem;
 }
+
+.aside_container {
+    display: flex;
+}
+
+.aside_container li {
+    list-style: none;
+    margin-left: 10px;
+    padding: 10px;
+}
+
+aside .prog_container {
+    border: 1px solid red;
+    margin-top: 40px;
+    width: 50%;
+}
+
+aside .tools_container {
+    border: 1px solid red;
+    flex: 1;
+    width: 100%;
+    margin-top: 40px;
+}
+
