--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -313,13 +313,20 @@ article {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 1px solid red;
+    gap: 1rem;
 }
 
 .article_content_title {
     width: 100%;
+    text-align: center;
+    border: 1px solid #4caf50;
+    border-radius: 10px;
 }
 
 .article_content_title img {
-    width: 10em;
+    width: 20em;
+}
+
+.article_content_title h3 {
+    font-size: 2rem;
 }
