--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -388,22 +388,33 @@ aside .tools_container {
 /******************* FOOTER FORM *****************/
 
 .send_to_email {
-    width: 800px;
+    width: 400px;
+    height: 100%rem;
     margin: 0 auto;
+    position: relative;
 }
 
 .send_to_email form {
+    border: 1px solid blue;
     width: 100%;
-    height: 100%;
-    display: flex;
+    height: 10rem;
     gap: 1rem;
     margin-bottom: 5rem;
-    /* border: 1px solid blue; */
+
+    button {
+        width: 100%;
+        height: 2rem;
+        margin: 0 auto;
+        border: 1px solid blue;
+    }
+    
 
     .STE_info {
-        width: 30rem;
+        width: 100%;
         height: 100%;
         margin: 0 auto;
+        position: relative;
+        border: 1px solid blue;
 
         input {
             width: 100%;
@@ -414,7 +425,7 @@ aside .tools_container {
 
     .STE_textarea {
         width: 100%;
-        height: 100%;
+        border: 1px solid blue;
 
         textarea {
             width: 100%;
