--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -387,15 +387,14 @@ aside .tools_container {
 
 /******************* FOOTER FORM *****************/
 
-.send_to_email {
+/* .send_to_email {
     width: 400px;
-    height: 100%rem;
+    height: 100%;
     margin: 0 auto;
     position: relative;
 }
 
 .send_to_email form {
-    border: 1px solid blue;
     width: 100%;
     height: 10rem;
     gap: 1rem;
@@ -405,7 +404,6 @@ aside .tools_container {
         width: 100%;
         height: 2rem;
         margin: 0 auto;
-        border: 1px solid blue;
     }
     
 
@@ -414,7 +412,6 @@ aside .tools_container {
         height: 100%;
         margin: 0 auto;
         position: relative;
-        border: 1px solid blue;
 
         input {
             width: 100%;
@@ -425,14 +422,13 @@ aside .tools_container {
 
     .STE_textarea {
         width: 100%;
-        border: 1px solid blue;
 
         textarea {
             width: 100%;
             height: 200px;
         }
-    }
+    } 
 
     
-}
+}*/
 
