--- a/mock_website/css/yoga_media.css
+++ b/mock_website/css/yoga_media.css
@@ -3,5 +3,7 @@
         grid-template-columns: 1fr;
         grid-template-rows: none;
         grid-auto-rows: 100vh;
+        max-width: 100%;
+        padding: 0 10px;
     }
 }
