--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -3,17 +3,21 @@
     margin: 0 auto;
     padding: 0;
     max-width: 1200px;
-    border: 1px solid red;
 }
 
-/* body {
+body {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 100vh);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 100vh);
     gap: 10px;
     height: auto;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+header {
+    border: 1px solid red;
+    width: 100%;
 }
 
 /* header,
@@ -29,4 +33,4 @@ footer {
     font-size: 2rem;
     border: 2px solid #333;
     width: 100%; 
-} */
+}
