--- a/mock_website/css/yoga_media.css
+++ b/mock_website/css/yoga_media.css
@@ -1,4 +1,4 @@
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     body {
         grid-template-columns: 1fr;
         grid-template-rows: none;
@@ -6,4 +6,4 @@
         max-width: 100%;
         padding: 0 10px;
     }
-}
+} */
