--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -18,6 +18,22 @@ body {
 header {
     border: 1px solid red;
     width: 100%;
+    height: 100vh;
+    margin-top: 1em;
+    padding: 10px 5px;
+    
+
+    ul {
+        display: flex;
+        border: 1px solid red;
+        list-style: none;
+    }
+
+    /* ul li:nth-child(1),
+    li:nth-child(2),
+    li:nth-child(3) {
+        margin-right: 10px;
+    } */
 }
 
 /* header,
