--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -23,21 +23,36 @@ header {
         position: relative;
         width: 100%;
         display: flex;
-        border: 1px solid red;
 
         ul {
+            position: relative;
             display: flex;
             flex-direction: row;
             justify-content: center;
             width: 100%;
 
             li {
-                border: 1px solid blue;
+                cursor: pointer;
                 list-style: none;
-                padding: 0;
+                padding: .5rem;
                 margin: 0;
+                transition: transform 0.3s ease;
+            }
+
+            li:hover {
+                transform: scale(1.);
             }
         }
-
     }
+
+}
+
+header ul li:nth-child(5) {
+    margin-left: auto;
+}
+
+header ul li:nth-child(4) {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
