--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -12,7 +12,7 @@ body {
 
 header {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
     border: 1px solid red;
     width: 100%;
     height: 100vh;
@@ -36,11 +36,10 @@ header {
                 list-style: none;
                 padding: .5rem;
                 margin: 0;
-                transition: transform 0.3s ease;
-            }
 
-            li:hover {
-                transform: scale(1.);
+                input {
+                    padding: .5rem;
+                }
             }
         }
     }
@@ -55,4 +54,12 @@ header ul li:nth-child(4) {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.container_2 {
+    background-color: grey;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-top: 13rem;
 }
