--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -17,6 +17,7 @@ header {
     width: 100%;
     height: 100vh;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     flex: 1;
     
     .container {
@@ -57,9 +58,27 @@ header ul li:nth-child(4) {
 }
 
 .container_2 {
-    background-color: grey;
     width: 100%;
-    height: 100%;
-    position: relative;
+    max-height: 100vh;
+    overflow: hidden;
     margin-top: 13rem;
+
+        .header_image {
+            position: relative;
+            width: 100%;
+            height: 100%;
+
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+                display: block;
+                z-index: 1;
+
+                p {
+                    font-size: 2em;
+                    z-index: 0;
+                }
+            }
+        }
 }
