--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -14,8 +14,8 @@ header {
     display: flex;
     flex-direction: column;
     border: 1px solid red;
-    width: 100%;
-    height: 100vh;
+    width: 100dvh;
+    height: 100dvh;
     margin-top: 1rem;
     margin-bottom: 1rem;
     flex: 1;
@@ -59,26 +59,19 @@ header ul li:nth-child(4) {
 
 .container_2 {
     width: 100%;
+    height: 100dvh;
     max-height: 100vh;
     overflow: hidden;
     margin-top: 13rem;
+    background-image: url('../../upload/images/yoga.jpg');
+    background-size: cover;
+    background-position: center;
 
-        .header_image {
-            position: relative;
-            width: 100%;
-            height: 100%;
-
-            img {
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
-                display: block;
-                z-index: 1;
-
-                p {
-                    font-size: 2em;
-                    z-index: 0;
-                }
-            }
+        p {
+            width: 100dvh;
+            font-size: 3em;
+            position: absolute;
+            bottom: 1rem;
+            text-align: center;
         }
 }
