--- a/mock_website/css/yoga.css
+++ b/mock_website/css/yoga.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 0;
     max-width: 1200px;
+    font-size: 16px;
 }
 
 body {
@@ -67,10 +68,12 @@ header ul li:nth-child(4) {
     background-image: url('../../upload/images/yoga.jpg');
     background-size: cover;
     background-position: center;
+    position: relative;
+        
 
-        p {
-            width: 100dvh;
-            font-size: 3em;
+            p {
+            width: 100%;
+            font-size: clamp(1.5rem, 3.5vw, 6rem);
             position: absolute;
             bottom: 0.1rem;
             text-align: center;
@@ -96,17 +99,31 @@ nav {
             gap: 0.5rem;
 
             li {
-                border: 1px solid blue;
+                border-width: clamp(0.5px, 0.3vw, 1px);
+                border-style: solid;
+                border-color: gray;
+                border-radius: 10px;
                 width: 100%;
                 height: 100%;
                 list-style: none;
                 text-align: center;
-                font-size: 1.3em;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+
+                a {
+                    font-size: clamp(0.8rem, 2.5vw, 1.5rem);
+                    color: #000;
+                    text-decoration: none;
+                }
+
+                
+
+                }
+
             }
         }
 
     }
 }
+
