--- a/css/index_jp.css
+++ b/css/index_jp.css
@@ -188,6 +188,7 @@ header h1 span {
     position: relative;
     z-index: 2;
     box-shadow: var(--shadow);
+    margin-top: 2rem;
 }
 
 .second-box {
